fix open location bug